# deepl-office-translator

./: .gitignore  requirements.txt
.github/workflows/: build-tauri.yml
src/: account_info.js  document.js  getApiKeys.js  get_languages.js  index.html  main.js  message.css  message.js  styles.css  translate.js
src-tauri/: Cargo.toml  pyproject.toml  tauri.conf.json
src-tauri/src/: documents.rs  get_api_keys.rs  glossary.rs  main.rs  process_call.rs  translate.rs  translator_requests.rs  utils.rs
src/translator/: account_info.py  documents.py  glossary.py  translate.py  utils.py
