[package]
name = "AI_translator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }


[dependencies]
tauri = { version = "1", features = [ "path-all", "app-all", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.20.3"}

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
auto-initialize = ["pyo3/auto-initialize"]
default = ["auto-initialize"]
